* Fixed style of list item components of Import view - Updated rows gap for Import transactions list - Updated content padding of ImportTransactionItem component - Added --list-item-alt-bg-color and --list-item-hover-bg-color custom CSS properties

--- a/src/view/Views/Import/components/TransactionForm/ImportTransactionForm.scss
+++ b/src/view/Views/Import/components/TransactionForm/ImportTransactionForm.scss
@@ -72,6 +72,6 @@
     overflow: hidden;
     color: var(--text-color-3);
     border-color: var(--border-color-2);
-    background-color: var(--bg-color-3);
+    background-color: var(--list-item-alt-bg-color);
   }
 }
